config-root/namespaces/jx-production/python-flask-docker2/python-flask-docker2-python-flask-docker2-deploy.yaml
# Source: python-flask-docker2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-docker2-python-flask-docker2
  labels:
    draft: draft-app
    chart: "python-flask-docker2-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: python-flask-docker2-python-flask-docker2
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: python-flask-docker2-python-flask-docker2
    spec:
      serviceAccountName: python-flask-docker2-python-flask-docker2
      containers:
        - name: python-flask-docker2
          image: "130405883059.dkr.ecr.us-west-1.amazonaws.com/lexarflash8g/python-flask-docker2:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
