config-root/namespaces/jx-production/python-flask-docker2/python-flask-docker2-svc.yaml
# Source: python-flask-docker2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-docker2
  labels:
    chart: "python-flask-docker2-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: python-flask-docker2-python-flask-docker2
